# django-cloudflareimages-toolkit

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  PROJECT_REVIEW.md  README.md  WEBHOOK_SETUP.md  context7.json  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_cloudflareimages_toolkit/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  fields.py  metadata.py  models.py  registry.py  serializers.py  services.py  settings.py  signals.py  transformations.py  url_factory.py  urls.py  views.py  widgets.py
django_cloudflareimages_toolkit/management/commands/: cleanup_expired_images.py  reconcile_image_usage.py
django_cloudflareimages_toolkit/migrations/: 0001_initial.py  0002_cloudflareimage_creator.py  0003_imageusage.py  0004_imageusage_source_and_image_last_referenced.py  0005_backfill_last_referenced_at.py  0006_pin_index_names.py
django_cloudflareimages_toolkit/static/admin/js/: cloudflare_images_admin.js
django_cloudflareimages_toolkit/static/django_cloudflareimages_toolkit/css/: cloudflare_image_widget.css
django_cloudflareimages_toolkit/static/django_cloudflareimages_toolkit/js/: cloudflare_image_widget.js
django_cloudflareimages_toolkit/templates/admin/django_cloudflareimages_toolkit/cloudflareimage/: change_list.html
django_cloudflareimages_toolkit/templates/django_cloudflareimages_toolkit/widgets/: cloudflare_image_widget.html
django_cloudflareimages_toolkit/templatetags/: cloudflare_images.py
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  patterns.rst  url_factory.rst  usage.rst  webhooks.rst
docs/codedocs/: architecture.md  direct-upload-lifecycle.md  image-transformations.md  image-usage-registry.md  index.md  tracked-images.md
docs/codedocs/api-reference/: admin-and-widget.md  cloudflareimage-models.md  cloudflareimagefield.md  cloudflareimagesservice.md  package-exports.md  settings-and-exceptions.md  template-tags.md  transformations.md  views-and-routes.md
docs/codedocs/guides/: browser-direct-upload.md  model-field-forms.md  responsive-templates.md  webhooks-and-cleanup.md
examples/: README.md
tests/: models.py  settings.py  test_constants.py  test_endpoint_ssot.py  test_gallery_and_api.py  test_imports.py  test_migrations_ssot.py  test_models.py  test_self_healing_delete.py  test_services.py  test_transformations.py  test_url_factory.py  test_usage_registry.py  test_webhook_view.py  test_widget.py  urls.py
